syntax = "proto3";
package grpc_api;
option go_package = "github.com/rodfer0x80/GoRPC/grpc_api";

service Embed {
    rpc GetCommand (Empty) returns (Command);
    rpc SendResult (Command) returns (Empty);
}

service Admin {
    rpc ExecuteCommand (Command) returns (Command);
}

message Command {
    string Input = 1;
    string Output = 2;
}
// Empty message to use in place of null
message Empty {
}